--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,28 +1,44 @@
-﻿@using MVC5.Common
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+@using MVC5.Common
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - @MyConstant.Web_Name</title>
+    <meta name="description" content="Developed By M Abdur Rokib Promy">
+    <meta name="author" content="cosmic">
+    <meta name="keywords" content="Bootstrap 3, Template, Theme, Responsive, Corporate, Business">
+    <link rel="shortcut icon" href="~/Content/img/jomrumalogo.ico">
 
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta content="Metronic Shop UI description" name="description">
-    <meta content="Metronic Shop UI keywords" name="keywords">
-    <meta content="keenthemes" name="author">
-    <meta property="og:site_name" content="Nadikebangsaan.com">
-    <meta property="og:title" content="Bercuti Percuma Dengan Mendaftar Ahli Pertubuhan Berpakej">
-    <meta property="og:description" content="TERBUKA KEPADA RAKYAT MALAYSIA BERUMUR 18 TAHUN KEATAS.
-PROGRAM INI MENAWARKAN AHLI NADI KEARAH KEUSAHAWANAN.
-RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="http://www.nadikebangsaan.com/Content/img/nadilogo.png"><!-- link to image for socio -->
-    <meta property="og:url" content="http://www.nadikebangsaan.com/">
-    <link rel="shortcut icon" href="~/Content/img/lelongpos.ico">
+    <title>
+        @ViewBag.Title - @MyConstant.Web_Name
+    </title>
 
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <!-- Bootstrap core CSS -->
+    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/css/theme.css" rel="stylesheet">
+    <link href="~/Content/css/bootstrap-reset.css" rel="stylesheet">
+    <!-- <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--external css-->
+    <link href="~/Content/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="~/Content/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/css/flexslider.css" />
+    <link href="~/Content/assets/bxslider/jquery.bxslider.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/css/animate.css">
+    <link rel="stylesheet" href="~/Content/assets/owlcarousel/owl.carousel.css">
+    <link rel="stylesheet" href="~/Content/assets/owlcarousel/owl.theme.css">
+
+    <link href="~/Content/css/superfish.css" rel="stylesheet" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'> -->
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" type="text/css" href="~/Content/css/component.css">
+    <link href="~/Content/css/style.css" rel="stylesheet">
+    <link href="~/Content/css/style-responsive.css" rel="stylesheet" />
+
+    <link rel="stylesheet" type="text/css" href="~/Content/css/parallax-slider/parallax-slider.css" />
+    <script type="text/javascript" src="~/Scripts/parallax-slider/modernizr.custom.28468.js">
+
+    </script>
 
     <script>
     window.fbAsyncInit = function () {
@@ -42,12 +58,12 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
     }(document, 'script', 'facebook-jssdk'));
 
 
-    
+
     </script>
 
 </head>
-@using MVC5.Common
-<body id="page-top" class="index">
+
+<body style="padding:0px !important">
 
     <div id="fb-root"></div>
     <script>
@@ -59,154 +75,117 @@ RM280 UNTUK SETIAP AHLI BARU YANG DIBAWA OLEH AHLI SEDIADA SELAKU PENCADANG">
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
-
-
-    <!-- END BEGIN STYLE CUSTOMIZER -->
-    <!-- BEGIN TOP BAR -->
-    <div class="pre-header">
-        <div class="container">
-            <div class="row">
-                <!-- BEGIN TOP BAR LEFT PART -->
-                <div class="col-md-6 col-sm-6 additional-shop-info">
-                    <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>@MyConstant.last_office_noTel</span></li>
-                        <li><i class="fa fa-envelope-o"></i><span>@MyConstant.last_office_email</span></li>
-                    </ul>
-                </div>
-                <!-- END TOP BAR LEFT PART -->
-                <!-- BEGIN TOP BAR MENU -->
-                @Html.Partial("_LoginPartial")
-                <!-- END TOP BAR MENU -->
+    @Html.Partial("header")
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                @RenderBody()
             </div>
         </div>
     </div>
-    <!-- END TOP BAR -->
-    <!-- BEGIN HEADER -->
-    <div class="header">
-        <div class="container">
-            <a class="site-logo" href="/Home"><img src="~/Content/img/nadilogoText.png" style="width:66px; height:32px;" alt="Metronic FrontEnd"></a>
-            <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
-            <!-- BEGIN NAVIGATION -->
-            <div class="header-navigation pull-right font-transform-inherit">
-                <ul>
-                    
 
+    @Html.Partial("footer")
+    <!-- js placed at the end of the document so the pages load faster
+    <script src="~/Scripts/jquery.js">
+    </script>
+    -->
+    <script src="~/Scripts/jquery-1.8.3.min.js">
+    </script>
+    <script src="~/Scripts/bootstrap.min.js">
+    </script>
+    <script type="text/javascript" src="~/Scripts/hover-dropdown.js">
+    </script>
+    <script defer src="~/Scripts/jquery.flexslider.js">
+    </script>
+    <script type="text/javascript" src="~/Content/assets/bxslider/jquery.bxslider.js">
+    </script>
 
-                    @*<li>
-                            @Html.ActionLink("Blog", "Index", "Student", new { area = "" }, null)
-                        </li>*@
-                    
-                    @if (Request.IsAuthenticated)
-                    {
-                       
-                        <li>
-                            @Html.ActionLink("Upload", "Index", "Transaction", new { area = "" }, null)
-                        </li>
-                        
-                    }
-                    @if (User.IsInRole(MyConstant.Role_Admin))
-                    {
-                        <li>
-                            @Html.ActionLink("Membership Request", "MembershipRequest", "Transaction", new { area = "" }, null)
-                        </li>
-                        <li>
-                            @Html.ActionLink("Claim Request", "ClaimRequestList", "Transaction", new { area = "" }, null)
-                        </li>
+    <script type="text/javascript" src="~/Scripts/jquery.parallax-1.1.3.js">
+    </script>
+    <script src="~/Scripts/wow.min.js">
+    </script>
+    <script src="~/Content/assets/owlcarousel/owl.carousel.js">
+    </script>
 
-                        <li>
-                            @Html.ActionLink("Upload", "Index", "Transaction", new { area = "" }, null)
-                        </li>
+    <script src="~/Scripts/jquery.easing.min.js">
+    </script>
+    <script src="~/Scripts/link-hover.js">
+    </script>
+    <script src="~/Scripts/superfish.js">
+    </script>
+    <script type="text/javascript" src="~/Scripts/parallax-slider/jquery.cslider.js">
+    </script>
+    <script type="text/javascript">
+                $(function () {
 
-
-                    }
-
-
-                </ul>
-            </div>
-            <!-- END NAVIGATION -->
-        </div>
-    </div>
-    <!-- Header END -->
-
-
-
-    <div class="main">
-        <div class="container">
-            @RenderBody()
-        </div>
-        @*<div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="content-page">
-                        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-                    </div>
-                </div>
-            </div>
-            </div>*@
-        </div>
-    
-                
-                <!-- BEGIN FOOTER -->
-                <div class="footer">
-                    <div class="container">
-                        <div class="row">
-                            <!-- BEGIN COPYRIGHT -->
-                            <div class="col-md-6 col-sm-6 padding-top-10">
-                                <p>&copy; @DateTime.Now.Year - @MyConstant.Web_Name</p>
-                            </div>
-                            <!-- END COPYRIGHT -->
-                            <!-- BEGIN PAYMENTS -->
-                            <div class="col-md-6 col-sm-6">
-                                <ul class="social-footer list-unstyled list-inline pull-right">
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-github"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-dropbox"></i></a></li>
-                                </ul>
-                            </div>
-                            <!-- END PAYMENTS -->
-                        </div>
-                    </div>
-                </div>
-                <!-- END FOOTER -->
-                @Scripts.Render("~/bundles/jquery")
-                @Scripts.Render("~/bundles/bootstrap")
-                @RenderSection("scripts", required: false)
-                <!-- Load javascripts at bottom, this will reduce page load time -->
-                <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
-                <!--[if lt IE 9]>
-                <script src="~/Content/assets/global/plugins/respond.min.js"></script>
-                <![endif]-->
-                <script src="~/Content/assets/global/plugins/jquery.min.js" type="text/javascript"></script>
-                <script src="~/Content/assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-                <script src="~/Content/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-                <script src="~/Content/assets/frontend/layout/scripts/back-to-top.js" type="text/javascript"></script>
-                <!-- END CORE PLUGINS -->
-                <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-                <script src="~/Content/assets/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-                <script src="~/Content/assets/global/plugins/carousel-owl-carousel/owl-carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
-                <!-- BEGIN RevolutionSlider -->
-
-                <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
-                <script src="~/Content/assets/global/plugins/slider-revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
-                <script src="~/Content/assets/frontend/pages/scripts/revo-slider-init.js" type="text/javascript"></script>
-                <!-- END RevolutionSlider -->
-                <script src="~/Content/assets/frontend/layout/scripts/layout.js" type="text/javascript"></script>
-                <script type="text/javascript">
-                    jQuery(document).ready(function () {
-                        Layout.init();
-                        Layout.initOWL();
-                        RevosliderInit.initRevoSlider();
-                        Layout.initTwitter();
-                        //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
-                        //Layout.initNavScrolling();
+                    $('#da-slider').cslider({
+                        autoplay: true,
+                        bgincrement: 100
                     });
-                </script>
-</body>
 
+                });
+    </script>
+
+
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+    <script>tinymce.init({ selector:'textarea' });</script>
+
+    <!--common script for all pages-->
+    <script src="~/Scripts/common-scripts.js">
+    </script>
+
+    <script type="text/javascript">
+                jQuery(document).ready(function () {
+
+
+                    $('.bxslider1').bxSlider({
+                        minSlides: 5,
+                        maxSlides: 6,
+                        slideWidth: 360,
+                        slideMargin: 2,
+                        moveSlides: 1,
+                        responsive: true,
+                        nextSelector: '#slider-next',
+                        prevSelector: '#slider-prev',
+                        nextText: 'Onward →',
+                        prevText: '← Go back'
+                    });
+
+                });
+
+
+    </script>
+
+
+    <script>
+                $('a.info').tooltip();
+
+                $(window).load(function () {
+                    $('.flexslider').flexslider({
+                        animation: "slide",
+                        start: function (slider) {
+                            $('body').removeClass('loading');
+                        }
+                    });
+                });
+
+                $(document).ready(function () {
+
+                    $("#owl-demo").owlCarousel({
+
+                        items: 4
+
+                    });
+
+                });
+
+                jQuery(document).ready(function () {
+                    jQuery('ul.superfish').superfish();
+                });
+
+                new WOW().init();
+
+
+    </script>
+</body>
 </html>
