--- a/Views/Articles/Edit.cshtml
+++ b/Views/Articles/Edit.cshtml
@@ -18,7 +18,8 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            Image
+            <label class="control-label col-md-2">Image</label>
+            
             <div class="col-md-10">
                 <input type="file" name="UploadedFile" class="form-control" />
             </div>
