--- a/Views/Listingadmin/Edit.cshtml
+++ b/Views/Listingadmin/Edit.cshtml
@@ -19,7 +19,7 @@
         
 
         <div class="form-group">
-            Image
+            <label class="control-label col-md-2">Image</label>
             <div class="col-md-10">
                 <input type="file" name="UploadedFile" class="form-control" />
             </div>
