--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -85,6 +85,70 @@
 
                         </div>
                     </div>
+                  
+
+                        @using (Html.BeginForm("saveBannerImage", "Manage", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            if (User.IsInRole("Admin"))
+                            {
+
+                                <hr />
+                                <h3>Change Banner</h3>
+                                <div class="row">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2">Banner 1 (.png)</label>
+                                        <div class="col-md-10">
+                                            <input type="file" name="banner1" class="form-control" />
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="row">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2">Banner 2 (.png)</label>
+                                        <div class="col-md-10">
+                                            <input type="file" name="banner2" class="form-control" />
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="row">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2">Banner 3 (.png)</label>
+                                        <div class="col-md-10">
+                                            <input type="file" name="banner3" class="form-control" />
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="row">
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2">Main Banner (.jpg)</label>
+                                        <div class="col-md-10">
+                                            <input type="file" name="bannerMain" class="form-control" />
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" value="Change" class="btn btn-success" />
+                                    </div>
+                                </div>
+
+                            }
+
+                        }
+
+                    
 
              
                     </div>
