--- a/Views/Listingadmin/Edit.cshtml
+++ b/Views/Listingadmin/Edit.cshtml
@@ -26,6 +26,16 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.featured, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.featured)
+                    @Html.ValidationMessageFor(model => model.featured, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.PropertyTypeId, "PropertyTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("PropertyTypeId", null, htmlAttributes: new { @class = "form-control" })
