--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -316,7 +316,7 @@
 
                             </div>
 
-                            <div class="col-xs-4 col-sm-4 col-md-4">
+                            <div class="col-lg-4">
                                 <div class="thumbnail wow fadeInUp bg-gray" data-wow-delay=".1s">
                                     <img src="~/Content/img/team/member1.jpg" alt="">
                                     <div class="caption">
