--- a/Views/Listing/Details.cshtml
+++ b/Views/Listing/Details.cshtml
@@ -136,7 +136,7 @@
                                                 Built up
                                             </td>
                                             <td>
-                                                <strong>RM @Model.listing.Size (Sq.ft)</strong>
+                                                <strong>@Model.listing.Size (Sq.ft)</strong>
                                             </td>
                                         </tr>
                                         <tr>
