--- a/Views/Shared/MenuAdmin.cshtml
+++ b/Views/Shared/MenuAdmin.cshtml
@@ -32,10 +32,10 @@
         @Html.ActionLink("Comment", "Index", "Comments")
     </li>
     <li>
-        @Html.ActionLink("SAK", "Index", "SAK")
+        @Html.ActionLink("Category", "Index", "SAK")
     </li>
     <li>
-        @Html.ActionLink("SK", "Index", "SK")
+        @Html.ActionLink("Category Group", "Index", "SK")
     </li>
     <li>
         @Html.ActionLink("Menus", "Index", "Menus")
